--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                 </p>
                                 <div class="team-social">
                                     <a class="btn" href="https://www.credly.com/badges/cc4c8a39-4923-4322-a1eb-62836ceec02f/public_url"><i class="fa-solid fa-link"></i></a>
-                                    <a class="btn" href="https://drive.google.com/file/d/1MkGxqBf2F2c-HXF-X_2ASDKWaLMB8YYB/view?usp=drive_link"><i class="fa-solid fa-certificate"></i></a>
+                                    <a class="btn" href="https://drive.google.com/file/d/1tJWMh4CTPW1hXJV6Y9bSjUQVV7TfoQ16/view?usp=sharing"><i class="fa-solid fa-certificate"></i></a>
                                 </div>
                             </div>
                         </div>
