--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>Swagat Food Delivery</h3>
-                                <a class="btn" href="https://ranjanabhi07.github.io/Swagat-UI-UX-Design-/"><i class="fa-solid fa-link"></i></a>
-                                <a class="btn" href="https://github.com/ranjanabhi07/Swagat-UI-UX-Design-"><i class="fab fa-github"></i></a>
+                                <a class="btn" href="https://ranjanabhi07.github.io/Swagat/"><i class="fa-solid fa-link"></i></a>
+                                <a class="btn" href="https://github.com/ranjanabhi07/Swagat"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -287,7 +287,7 @@
                             </div>
                             <div class="portfolio-text">
                                 <h3>Secrets Hangar</h3>
-                                <a class="btn" href="https://github.com/ranjanabhi07/Authentication-Secret"><i class="fab fa-github"></i></a>
+                                <a class="btn" href="https://github.com/ranjanabhi07/AnoneVerse"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
